--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^17.3.11",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -23,6 +23,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "jquery": "^3.7.1",
     "ngx-slick-carousel": "^17.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
