--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "jquery": "^3.7.1",
+    "lottie-web": "^5.12.2",
     "ngx-slick-carousel": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
