--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@emailjs/browser": "^4.3.3",
+    "@lottiefiles/lottie-player": "^2.0.12",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "jquery": "^3.7.1",
     "lottie-web": "^5.12.2",
+    "ng-lottie": "^0.3.2",
     "ngx-lottie": "^11.0.2",
     "ngx-slick-carousel": "^17.0.0",
     "ngx-toastr": "^19.0.0",
