--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "jquery": "^3.7.1",
+    "keen-slider": "^6.8.6",
     "lottie-web": "^5.12.2",
     "ng-lottie": "^0.3.2",
     "ngx-lottie": "^11.0.2",
